# TTNN

./: .gitignore  BranchLeverageForGrokkingResearch.md  CMakeLists.txt  Journal.md  NetworkViz.md  README.md  main.cpp  parameter_movement_metrics.md  tttn_dump.txt
research/: AlphaToe.md  GenerativeLM.md  MNIST_Circuits.md  MappingLatentSpaces.md  StructuredLearning.md  compiler.md  learning_mechanics_ideas.md
src/: Attention.hpp  BlockComposition.hpp  BlockSequence.hpp  BranchTrainer.hpp  BytePairTokenizer.hpp  ChainBlock.hpp  ContractionBlock.hpp  DataIO.hpp  Dense.hpp  DenseBlock.hpp  EncoderDecoder.hpp  MoreNets.hpp  NetworkComposition.hpp  NetworkUtil.hpp  NeuralNet.hpp  Params.hpp  Snapshot.hpp  TTTN.hpp  TTTN_ML.hpp  Tensor.hpp  TensorContract.hpp  TensorFunctions.hpp  TensorMLUtil.hpp  TensorOps.hpp  TensorPrereqs.hpp  TensorReduce.hpp  TensorShapeOps.hpp  TensorStorage.hpp  TensorUtil.hpp  TrainableTensorNetwork.hpp  TransformerBlock.hpp  TransformerTrainer.hpp  nn.hpp
tools/: transformer_trainer_dashboard.py
